# spark_connect_remote

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml
doc/: ARCHITECTURE.md
src/spark_connect_kbase_auth/: __init__.py  channel_builder.py  session.py
src/spark_connect_remote/: __init__.py  channel_builder.py  interceptors.py  kbase_client.py  py.typed  session.py
tests/: __init__.py  test_channel_builder.py  test_interceptors.py  test_kbase_client.py  test_session.py
